niro/src/test/resources/negative/invalid-expression.ql
form InvalidExpression {
    "Is this legal?"  legal: money = ( nonexisting-- )
}